--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ coverage
 /cypress/screenshots/
 
 # Editor directories and files
+# Editor directories and files
 .vscode/*
 !.vscode/extensions.json
 .idea
